near-sdk/compilation_tests/private_init_method.stderr
error: Init function can't be private.
  --> compilation_tests/private_init_method.rs:14:5
   |
14 |     #[private]
   |     ^
